# zephyr_i2c

./: .gitignore  CMakeLists.txt  Kconfig  nrf52840dk_nrf52840.overlay  nrf52dk_nrf52832.overlay  prj.conf
drivers/: CMakeLists.txt  Kconfig
drivers/MS5637/: CMakeLists.txt  ms5637.c  ms5637.h
src/: main - Copy.c  main.c  main.c.old
src/bno/: CMakeLists.txt  blabla.c  blabla.h  bno055.c  bno055_support.c  bno055_support.h
